added resources and statics

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% block title %}
+The Woolf Wit Society
+{% endblock title %}
 {% block body %}
 <h1> this is home baby!! </h1>
 {% endblock body %}
