--- a/templates/base.html
+++ b/templates/base.html
@@ -19,29 +19,32 @@
     <link rel="stylesheet" href="{% static 'twws/style/style.css' %}">
 </head>
 <body>
-
-
-
- <header class="text-gray-600 body-font">
-    <div class="container mx-auto flex flex-wrap p-8 flex-col md:flex-row items-center">
-        <a class="flex items-center mb-4 md:mb-0">
-            <span class="p-cinzel-light ml-3 brand text-xl">TWWS</span>
-        </a>
-        <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center uppercase">
-            <a class="p-light-14 mr-8 ml-8">Home</a>
-            <a class="p-light-14 mr-8 ml-8">Botm</a>
-            <a class="p-light-14 mr-8 ml-8">Reviews</a>
-            <a class="p-light-14 mr-8 ml-8">About</a>
-        </nav>
-        <button
-            class="secondary-btn p-dark items-center border-0 py-1 px-3 mt-4 md:mt-0 mr-8 ml-8">Signup</button>
-    </div>
+<div class="wrapper">
+  
+    <header class="text-gray-600 body-font">
+        <div class="container mx-auto flex flex-wrap p-8 flex-col md:flex-row items-center">
+            <a class="flex items-center mb-4 md:mb-0">
+                <span class="p-cinzel-light ml-3 brand text-xl">TWWS</span>
+            </a>
+            <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center uppercase">
+                <a href={% url 'home' %} class="p-light-14 mr-8 ml-8">Home</a>
+                <a class="p-light-14 mr-8 ml-8">Botm</a>
+                <a class="p-light-14 mr-8 ml-8">Reviews</a>
+                <a class="p-light-14 mr-8 ml-8">About</a>
+            </nav>
+            <a href={% url 'signup' %}>
+            <button 
+                class="secondary-btn p-dark items-center border-0 py-1 px-3 mt-4 md:mt-0 mr-8 ml-8">Signup</button>
+            </a>    
+</div>
     
     {% block header %}
     {% endblock header %}
- </header>
+    </header>
+</div> 
  
 {% block body %}
 {% endblock body %}
+
 </body>
 </html>
