--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
             </a>
             <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center uppercase">
                 <a href={% url 'home' %} class="p-light-14 mr-8 ml-8">Home</a>
-                <a class="p-light-14 mr-8 ml-8">Botm</a>
+                <a href="{% url 'bookofmonth' %}" class="p-light-14 mr-8 ml-8">Botm</a>
                 <a class="p-light-14 mr-8 ml-8">Reviews</a>
                 <a class="p-light-14 mr-8 ml-8">About</a>
             </nav>
