--- a/book/templates/book/review.html
+++ b/book/templates/book/review.html
@@ -1,23 +1,35 @@
-{% comment %} this is for base segements of other html pages {% endcomment %}
+{% extends 'base.html' %}
 {% load static %}
-<!doctype html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="{% static 'twws/resources/images/favicon_io/favicon-32x32.png' %}" type="image/x-icon">
 
-    <title>
-            {% block title %}
-            {% endblock title %}
-    </title>
+{% block title %}Reviews{% endblock title %}
 
-{% block head %}
-{% endblock head %}
-    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'twws/style/style.css' %}">
-</head>
-<body>
-    
-</body>
+{% block body %}
+
+
+<div class="wrapper">
+
+    <section class="">
+        {% for review in reviews %}
+        <div class="container mx-auto flex px-32 py-24 md:flex-row flex-col items-center">
+            <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
+                <img class="post-img object-cover object-center rounded" alt="hero"
+                    src="{{review.book.cover.url}}">
+            </div>
+            <div
+                class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
+                <div class="flex mt-2 mb-4 justify-center items-center text-center uppercase p-dark-18-bold">
+                    <div class="w-32 h-1 line rounded-full inline-flex mr-2"></div>
+                    Book Review
+                </div>
+                <h1 class="sm:text-4xl text-5xl mb-4 p-cinzel-dark sub-heading uppercase">{{review.book}}
+                </h1>
+                <p class="mb-4 mt-6 p-dark-14" style="width: 90%;">{{review.review|slice:":320"}}</p>
+                <div class="flex justify-center">
+                    <button class="primary-btn p-normal items-center uppercase md:mt-4 sm:mt-2"><a href="{% url 'reviewdetail' review.pk %}">read more</a></button>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </section>
+</div>
+{% endblock body %}
