--- a/book/templates/book/review_detail.html
+++ b/book/templates/book/review_detail.html
@@ -1,23 +1,18 @@
 {% extends 'base.html' %}
+{% load static %}
+
+{% block title %}Detail Review {% endblock title %}
 
 {% block body %}
 <div class="wrapper">
     <section class="">
         <div class="container mx-auto flex px-5 py-12 items-center justify-center flex-col">
         <div class="lg:w-3/4 md:w-3/4 w-5/6 mb-10 object-cover object-center rounded post-cover" alt="hero">
-            <h1 class="sm:text-4xl text-5xl mb-4 p-cinzel-dark sub-heading uppercase">This is title related to
-                Midnight library.
+            <h1 class="sm:text-4xl text-5xl mb-4 p-cinzel-dark sub-heading uppercase">{{review.book}}
             </h1>
         </div>
         <div class="text-left lg:w-2/3 w-full">
-            <p class="mb-4 mt-6 p-dark-14" style="width: 90%;">Lorem ipsum dolor sit, amet consectetur
-                adipisicing elit. Unde veniam, tenetur ducimus, fugit pariatur distinctio a labore alias sunt
-                atque laudantium ut cum quia doloribus nisi vel ratione consequatur reiciendis amet inventore
-                dolor vitae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero minima aliquam ipsam
-                temporibus aperiam cupiditate similique voluptate! Deserunt non, nostrum molestias saepe
-                assumenda, voluptatum corrupti soluta officiis amet mollitia accusantium necessitatibus? Totam,
-                quas. Sequi dolore laudantium corporis perferendis provident a libero laborum, reiciendis
-                consequatur odit magnam illo ipsa maiores. Fuga.</p>
+            <p class="mb-4 mt-6 p-dark-14" style="width: 90%;">{{review.review}}</p>
         </div>
         </div>
     </section>
