--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
             <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center uppercase">
                 <a href={% url 'home' %} class="p-light-14 mr-8 ml-8">Home</a>
                 <a href="{% url 'bookofmonth' %}" class="p-light-14 mr-8 ml-8">Botm</a>
-                <a class="p-light-14 mr-8 ml-8">Reviews</a>
+                <a href="{% url 'reviews' %}" class="p-light-14 mr-8 ml-8">Reviews</a>
                 <a class="p-light-14 mr-8 ml-8">About</a>
             </nav>
             <a href={% url 'signup' %}>
