--- a/book/templates/book/review_detail.html
+++ b/book/templates/book/review_detail.html
@@ -1,19 +1,50 @@
 {% extends 'base.html' %}
 {% load static %}
 
+
+{% block head %}
+<style>
+.post-img {
+    width: 450px;
+    height: 360px;
+  }
+  
+  .post-cover {
+    height: 380px;
+    background-image: linear-gradient(45deg, rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url("{{ review.book.cover.url }}");
+    -o-object-fit: contain;
+       object-fit: contain;
+    -o-object-position: center;
+       object-position: center;
+    background-position: center center;
+    text-align: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+</style> 
+{% endblock head %}
+
+
 {% block title %}Detail Review {% endblock title %}
 
 {% block body %}
 <div class="wrapper">
     <section class="">
         <div class="container mx-auto flex px-5 py-12 items-center justify-center flex-col">
-        <div class="lg:w-3/4 md:w-3/4 w-5/6 mb-10 object-cover object-center rounded post-cover" alt="hero">
-            <h1 class="sm:text-4xl text-5xl mb-4 p-cinzel-dark sub-heading uppercase">{{review.book}}
-            </h1>
-        </div>
-        <div class="text-left lg:w-2/3 w-full">
-            <p class="mb-4 mt-6 p-dark-14" style="width: 90%;">{{review.review}}</p>
-        </div>
+            <div class="lg:w-3/4 md:w-3/4 w-5/6 mb-10 object-cover object-center rounded post-cover" alt="hero">
+                <h1 class="sm:text-4xl text-5xl mb-4 p-cinzel-dark sub-heading uppercase">{{review.book}}
+                </h1>
+            </div>
+            <div class="text-left lg:w-2/3 w-full">
+                <p class="mb-4 mt-6 p-dark-14" style="width: 90%;">{{review.review}}</p>
+            </div>
         </div>
     </section>
 </div>
